--- a/eval.ipynb
+++ b/eval.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -394,6 +394,79 @@
    ],
    "source": [
     "print(model.predict(numpy.array([x_train[0]])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = ['1.04', '1.83', '1.26', '1.74', '1.25', '1.00', '1.36', '1.98', '1.71', '1.36', '1.38', '1.33', '1.85', '1.25', '1.84', '1.80', '1.66', '1.84', '1.53', '1.81', '1.92', '1.05', '1.47', '1.84', '1.35', '1.79', '1.81', '1.23', '1.53', '1.73', '1.31', '1.27', '1.47', '1.26', '1.44', '1.00', '1.77', '1.75', '1.15', '1.20', '1.73', '1.39', '1.28', '1.90', '1.23', '1.78', '1.38', '1.08', '1.51', '1.03', '1.72', '1.77', '1.22', '1.94', '1.94', '1.51', '1.30', '1.19', '1.10', '1.60', '1.22', '1.54', '1.49', '1.40', '1.22', '1.26', '1.62', '1.22', '1.61', '1.34', '1.69', '1.38', '1.89', '1.73', '1.26', '1.90', '1.05', '1.69', '1.91', '1.63', '1.10', '1.53', '1.88', '1.51', '1.10', '1.48', '1.56', '1.46', '1.26', '1.90', '1.68', '1.46', '1.75', '1.51', '1.39', '1.40', '1.27', '1.11', \n",
+    "'1.36', '1.11']\n",
+    "\n",
+    "print(len(data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-1.63446621  1.25871843 -0.82876922  0.92911512 -0.86539181 -1.78095657\n",
+      " -0.46254332  1.80805729  0.81924735 -0.46254332 -0.38929814 -0.57241109\n",
+      "  1.33196361 -0.86539181  1.29534102  1.14885066  0.6361344   1.29534102\n",
+      "  0.16004072  1.18547325  1.58832175 -1.59784362 -0.05969482  1.29534102\n",
+      " -0.49916591  1.11222807  1.18547325 -0.93863699  0.16004072  0.89249253\n",
+      " -0.64565627 -0.79214663 -0.05969482 -0.82876922 -0.16956259 -1.78095657\n",
+      "  1.03898289  0.96573771 -1.23161772 -1.04850476  0.89249253 -0.35267555\n",
+      " -0.75552404  1.51507657 -0.93863699  1.07560548 -0.38929814 -1.48797585\n",
+      "  0.08679554 -1.6710888   0.85586994  1.03898289 -0.97525958  1.66156693\n",
+      "  1.66156693  0.08679554 -0.68227886 -1.08512735 -1.41473067  0.41639885\n",
+      " -0.97525958  0.19666331  0.01355036 -0.31605296 -0.97525958 -0.82876922\n",
+      "  0.48964403 -0.97525958  0.45302144 -0.5357885   0.74600217 -0.38929814\n",
+      "  1.47845398  0.89249253 -0.82876922  1.51507657 -1.59784362  0.74600217\n",
+      "  1.55169916  0.52626662 -1.41473067  0.16004072  1.44183138  0.08679554\n",
+      " -1.41473067 -0.02307223  0.26990849 -0.09631741 -0.82876922  1.51507657\n",
+      "  0.70937958 -0.09631741  0.96573771  0.08679554 -0.35267555 -0.31605296\n",
+      " -0.79214663 -1.37810808 -0.46254332 -1.37810808]\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = [float(x) for x in data]\n",
+    "\n",
+    "print(feature_normalize(data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 337ms/step\n",
+      "[[9.0617198e-04 9.9988616e-01]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(model.predict(numpy.array([data])))"
    ]
   }
  ],
